# Localiza-o-Robotica_at3

./: CMakeLists.txt  README.md  dockerfile  package.xml
launch/: amcl_offline.launch  gmapping_offline.launch  hector_offline.launch  record_localization.launch  record_mapping.launch
maps/gmapping/: lar_gmapping.pgm  lar_gmapping.yaml
maps/hector/: lar_hector.yaml
results/metrics/: amcl_gmapping_metrics.csv  amcl_gmapping_summary.txt  amcl_hector_metrics.csv  amcl_hector_summary.txt  comparison_report.md  comparison_summary.csv
scripts/: check_dependencies.sh  check_mapping_topics.py  compare_amcl_results.py  generate_gmapping_map.sh  generate_hector_map.sh  localize_gmapping_map.sh  localize_hector_map.sh  record_localization.sh  record_mapping.sh  run_amcl_localization.sh  run_mapping.sh  start_simulation.sh
