<?xml version="1.0"?>
<package format="2">
  <name>localiza_o_robotica_at3</name>
  <version>0.1.0</version>
  <description>Gravacao de trajetorias e geracao offline de mapas do LaR com Hector SLAM e GMapping.</description>

  <maintainer email="ros@example.com">ROS User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>imagemagick</exec_depend>
  <exec_depend>lar_gazebo</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <export/>
</package>
